# ibfenics

./: .bashrc  .buildinfo  .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  MANIFEST.in  README.md  a.py  genindex.html  getting_started.html  installation.html  intro.html  markdown-notebooks.html  markdown.html  mesh.html  notebooks.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: doc.yml  push-docs.yml
_sources/: installation.md  intro.md  mesh.md  notebooks.ipynb
cpp/: CMakeLists.txt  Poisson2D.ufl  QuadratureRules.cpp  QuadratureRules.h  VTUIO.h  main.cpp  main.h
data/: demo_navier-stokes_5.json
doc/source/: conf.py  tutorial.rst
docs/: _config.yml  _toc.yml  a.py  conf.py  intro.md  mesh.md
feni/: __init__.py
ibfe/: __init__.py  io.py
ibfe/interaction/: Interaction.py  __init__.py
ibfe/mesh/: __init__.py  ale.py
ibfe/nssolver/: SAVTaylorHoodSolver.py  TaylorHoodSolver.py  __init__.py  (+2 more)
ibfenics/: IU.py  __init__.py  io.py  plot.py
ibfenics1/: IU.py  __init__.py  io.py  plot.py
npuheart/: __init__.py
src/: IB.cpp  IBInterpolation.cpp  IBInterpolation.h  IBInterpolation3D.h  IBMesh.cpp  IBMesh.h  IBMesh3D.h  main.cpp
src/gauss_quadrature/: CMakeLists.txt  FacetIntegration.cpp  FacetIntegration.h  Poisson2D.h  Poisson2D.ufl  VTUIO.h  a.cpp  a.h  main.cpp  main.h
tests/: a.py  convergence.py  notification.py  plt_AV_LV.py  quadrature.py  test.py  test_basic.py  test_duality.py  test_ibfe.py  test_interaction.py  test_io.py  test_nssolver.py  test_sav_nssolver.py  test_swanlab.py
(+190 files in other folders)
